--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Roman Numeral Converter</h1>
-    <input id="number" placeholder="Please enter a number"></input>
+    <input id="number" placeholder="Please enter a number" autofocus></input>
     <button id="convert-btn">Convert</button>
     <p id="output"></p>
     <script src="script.js"></script>
